--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.8"
 services:
   app:
     platform: linux/amd64
+    image: registry.gitlab.com/jaoaurai/container-registry/thaimui-pms-web:${TAG}
     container_name: jos-tms-iso
     ports:
       - "7002:5173"
